<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="xyz.linuskinzel.med44.MainActivity">

    <!-- todo: replace hardcoded strings -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">
        <TextView
            android:text="@string/user_profile"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/userprofileTextview"
            android:background="#363732"/>

        <TextView
            android:text="@string/medical_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/medicalhistoryTextview"
            android:layout_weight="1"
            android:background="#53D8FB"/>

    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        <TextView
            android:text="@string/vaccines"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:id="@+id/textViewVaccines"
            android:background="#66C3FF"/>

        <TextView
            android:text="@string/prescriptions"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/textViewPrescriptions"
            android:layout_weight="1"
            android:background="#DCE1E9"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <TextView
            android:text="@string/contact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:id="@+id/textViewContact"
            android:background="#D4AFB9"/>
    </LinearLayout>
</LinearLayout>
