<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="xyz.linuskinzel.med44.setupActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <ImageView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:src="@drawable/setup"
        android:scaleType="centerCrop"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">


            <TextView
                android:text="@string/welcome_to_med44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:text="@string/please_enter_the_information_below"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white50percent"
                android:layout_marginTop="45dp"
                android:padding="10dp">
                <TableRow
                    android:layout_width="match_parent">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText1" >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Your Name"
                            android:inputType="textPersonName" />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>
                <TableRow>
                    <android.support.design.widget.TextInputLayout
                        android:layout_height="wrap_content"
                        android:id="@+id/editText2"
                        android:layout_width="0dp"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Age"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow>

                        <TextView
                            android:paddingLeft="5dp"
                            android:text="Gender"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"/>
                        <Spinner
                            android:theme="@style/ThemeOverlay.AppCompat.Light"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:id="@+id/gender_spinner"
                            android:layout_height="55dp"
                            android:spinnerMode="dropdown"/>

                </TableRow>

            <TableRow>
                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="Height" />
                </android.support.design.widget.TextInputLayout>

            </TableRow>

            <TableRow>
                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="Weight" />
                </android.support.design.widget.TextInputLayout>

            </TableRow>

                <TableRow>

                    <TextView
                        android:paddingLeft="5dp"
                        android:text="Blood Type"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>
                    <Spinner
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:id="@+id/blood_spinner"
                        android:layout_height="55dp"
                        android:spinnerMode="dropdown"/>

                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/if_you_don_t_know_your_blood_type_leave_empty"/>
                </TableRow>

            </TableLayout>

                <Button
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:text="Continue"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/button"
                    android:onClick="onClick_submit"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            </LinearLayout>



    </FrameLayout>

</FrameLayout>
